Typeset ARC ROPE publications with Scholar citations (after syncing pub keys)

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -77,7 +77,7 @@ presort={06}
   rmdnote={pdf=https://arxiv.org/abs/1704.01704}
 }
 
-@article{marchant2017search,
+@article{marchant2017in,
   title={In Search of an Entity Resolution {OASIS}: Optimal Asymptotic Sequential Importance Sampling},
   author={Marchant, Neil G. and Rubinstein, Benjamin I. P.},
   journal={Proceedings of the VLDB Endowment},
@@ -91,7 +91,7 @@ presort={06}
   rmdnote={pdf=http://www.vldb.org/pvldb/vol10/p1322-rubinstein.pdf;full=https://arxiv.org/abs/1703.00617;code=http://git.io/OASIS}
 }
 
-@inproceedings{rubinstein2017pain,
+@inproceedings{rubinstein2017painfree,
   title={Pain-Free Random Differential Privacy with Sensitivity Sampling},
   author={Rubinstein, Benjamin I. P. and Alda, Francesco},
   booktitle={Proceedings of the 34th International Conference on Machine Learning},
@@ -104,7 +104,7 @@ presort={06}
   rmdnote={pdf=http://proceedings.mlr.press/v70/rubinstein17a.html;full=https://arxiv.org/abs/1706.02562;code=https://brubinstein.github.io/diffpriv}
 }
 
-@inproceedings{alda2017bernstein,
+@inproceedings{alda2017the,
   title={The Bernstein mechanism: Function release under differential privacy},
   author={Alda, Francesco and Rubinstein, Benjamin I. P.},
   booktitle={Proceedings of the 31st AAAI Conference on Artificial Intelligence},
@@ -128,7 +128,7 @@ presort={06}
   rmdnote={pdf=http://www.jmlr.org/papers/v18/15-257.html}
 }
 
-@article{lau2017machine,
+@article{lau2017machinelearning,
   title={Machine-learning algorithms predict graft failure after liver transplantation},
   author={Lau, Lawrence and Kankanige, Yamuna and Rubinstein, Benjamin and Jones, Robert and Christophi, Christopher and Muralidharan, Vijayaragavan and Bailey, James},
   journal={Transplantation},
@@ -152,7 +152,7 @@ presort={06}
   rmdnote={pdf=http://hdl.handle.net/11343/197958}
 }
 
-@misc{fish2017sublinear,
+@misc{fish2017sublineartime,
   title={Sublinear-Time Adaptive Data Analysis},
   author={Fish, Benjamin and Reyzin, Lev and Rubinstein, Benjamin I. P.},
   eprinttype = {arXiv},
@@ -164,7 +164,7 @@ presort={06}
   rmdnote={pdf=https://arxiv.org/abs/1709.09778}
 }
 
-@inproceedings{liu2017storm,
+@inproceedings{liu2017estorm,
   title={E-storm: Replication-based state management in distributed stream processing systems},
   author={Liu, Xunyun and Harwood, Aaron and Karunasekera, Shanika and Rubinstein, Benjamin and Buyya, Rajkumar},
   booktitle={46th International Conference on Parallel Processing},
@@ -220,7 +220,7 @@ presort={06}
   presort={12}
 }
 
-@inproceedings{zhang2016differential,
+@inproceedings{zhang2016on,
   title={On the differential privacy of {B}ayesian inference},
   author={Zhang, Zuhe and Rubinstein, Benjamin I. P. and Dimitrakakis, Christos},
   booktitle={Proceedings of the 30th AAAI Conference on Artificial Intelligence},
@@ -257,7 +257,7 @@ presort={06}
   rmdnote={pdf=http://ieeexplore.ieee.org/document/7837837/;full=http://arxiv.org/abs/1609.07983;alert=Winner, WiE Best Postgraduate Student Paper, IEEE Australia Council}
 }
 
-@inproceedings{alpcan2016large,
+@inproceedings{alpcan2016largescale,
   title={Large-scale strategic games and adversarial machine learning},
   author={Alpcan, Tansu and Rubinstein, Benjamin I. P. and Leckie, Christopher},
   booktitle={2016 IEEE 55th Conference on Decision and Control},
@@ -270,7 +270,7 @@ presort={06}
   rmdnote={pdf=http://ieeexplore.ieee.org/abstract/document/7798940/;full=http://arxiv.org/abs/1609.06438}
 }
 
-@article{han2016game,
+@article{han2016a,
   title={A game theoretical approach to defend against co-resident attacks in cloud computing: Preventing co-residence using semi-supervised learning},
   author={Han, Yi and Alpcan, Tansu and Chan, Jeffrey and Leckie, Christopher and Rubinstein, Benjamin I. P.},
   journal={IEEE Transactions on information Forensics and Security},
@@ -345,7 +345,7 @@ presort={06}
   rmdnote={pdf=http://www.aaai.org/Papers/AAAI/2015/13He.pdf}
 }
 
-@inproceedings{lim2015sub,
+@inproceedings{lim2015submerge,
   title={Sub-Merge: Diving Down to the Attribute-Value Level in Statistical Schema Matching.},
   author={Lim, Zhe and Rubinstein, Benjamin I. P.},
   booktitle={Proceedings of the 29th AAAI Conference on Artificial Intelligence},
@@ -383,7 +383,7 @@ presort={06}
   rmdnote={pdf=http://arxiv.org/abs/1401.7388;full=http://www.springer.com/us/book/9783319218519}
 }
 
-@article{fanaeepour2015case,
+@article{fanaeepour2015the,
   title={The {CASE} histogram: Privacy-aware processing of trajectory data using aggregates},
   author={Fanaeepour, Maryam and Kulik, Lars and Tanin, Egemen and Rubinstein, Benjamin I. P.},
   journal={GeoInformatica},
@@ -435,7 +435,7 @@ presort={03},
 rmdnote={pdf=http://www.sheridanprinting.com/CCS2014ep_11_4/forms/aisec.htm}
 }
 
-@article{zhao2012bayesian,
+@article{zhao2012a,
   title={A {B}ayesian approach to discovering truth from conflicting sources for data integration},
   author={Zhao, Bo and Rubinstein, Benjamin I. P. and Gemmell, Jim and Han, Jiawei},
   journal={Proceedings of the VLDB Endowment},
@@ -449,7 +449,7 @@ rmdnote={pdf=http://www.sheridanprinting.com/CCS2014ep_11_4/forms/aisec.htm}
   rmdnote={pdf=http://vldb.org/pvldb/vol5/p550_bozhao_vldb2012.pdf}
 }
 
-@article{rubinstein2012stability,
+@article{rubinstein2012on,
   title={On the stability of empirical risk minimization in the presence of multiple risk minimizers},
   author={Rubinstein, Benjamin I. P. and Simma, Aleksandr},
   journal={IEEE Transactions on Information Theory},
@@ -476,7 +476,7 @@ rmdnote={pdf=http://www.sheridanprinting.com/CCS2014ep_11_4/forms/aisec.htm}
   rmdnote={pdf=http://www.jmlr.org/papers/v13/nelson12a.html}
 }
 
-@article{rubinstein2012geometric,
+@article{rubinstein2012a,
   title={A geometric approach to sample compression},
   author={Rubinstein, Benjamin I. P. and Rubinstein, J. Hyam},
   journal={Journal of Machine Learning Research},
@@ -503,7 +503,7 @@ rmdnote={pdf=http://www.sheridanprinting.com/CCS2014ep_11_4/forms/aisec.htm}
   rmdnote={pdf=http://repository.cmu.edu/jpc/vol4/iss1/4/;full=http://arxiv.org/abs/0911.5708}
 }
 
-@article{barth2012learning,
+@article{barth2012a,
   title={A learning-based approach to reactive security},
   author={Barth, Adam and Rubinstein, Benjamin I. P. and Sundararajan, Mukund and Mitchell, John C and Song, Dawn and Bartlett, Peter L.},
   journal={IEEE Transactions on Dependable and Secure Computing},
@@ -568,7 +568,7 @@ rmdnote={pdf=http://www.sheridanprinting.com/CCS2014ep_11_4/forms/aisec.htm}
   rmdnote={pdf=http://arxiv.org/abs/1102.4374}
 }
 
-@techreport{barth2011open,
+@techreport{barth2011how,
   title={How Open Should Open Source Be?},
   author={Barth, Adam and Li, Saung and Rubinstein, Benjamin I. P. and Song, Dawn},
   institution={Department of Electrical Engineering \& Computer Sciences, UC Berkeley},
@@ -605,7 +605,7 @@ presort={05},
 rmdnote={pdf=https://www.microsoft.com/en-us/research/publication/proceedings-of-the-4th-acm-workshop-on-security-and-artificial-intelligence/}
 }
 
-@inproceedings{nelson2010near,
+@inproceedings{nelson2010nearoptimal,
   title={Near-Optimal Evasion of Convex-Inducing Classifiers.},
   author={Nelson, Blaine and Rubinstein, Benjamin I. P. and Huang, Ling and Joseph, Anthony D. and Lau, Shing-hon and Lee, Steven J. and Rao, Satish and Tran, Anthony and Tygar, J. Doug},
   booktitle={Proceedings of the Thirteenth International Conference on Artificial Intelligence and Statistics},
@@ -616,7 +616,7 @@ rmdnote={pdf=https://www.microsoft.com/en-us/research/publication/proceedings-of
   rmdnote={pdf=http://jmlr.csail.mit.edu/proceedings/papers/v9/nelson10a/nelson10a.pdf}
 }
 
-@inproceedings{barth2010learning,
+@inproceedings{barth2010a,
   title={A learning-based approach to reactive security},
   author={Barth, Adam and Rubinstein, Benjamin I. P. and Sundararajan, Mukund and Mitchell, John C. and Song, Dawn and Bartlett, Peter L.},
   booktitle={Proceedings of the Fourteenth International Conference on Financial Cryptography and Data Security},
