--- a/r/arc-rope.tex
+++ b/r/arc-rope.tex
@@ -87,7 +87,7 @@
 
 \noindent \textbf{D8. Research Opportunity and Performance Evidence (ROPE)---Publication list}
 
-\noindent Bibliometrics retrieved Mar 06, 2018: citation counts from
+\noindent Bibliometrics retrieved May 28, 2018: citation counts from
 Google Scholar; A*,A,B,C conference rankings from CORE2018; A*,A,B,C
 journal rankings from ERA2010 and 2015 5-year impact factors from
 Thomson Reuters. Project ID and years funded are included for papers
@@ -123,20 +123,20 @@ In:
 \emph{Measures of Complexity}.
 Ed. by V. Vovk, H. Papadopoulos and A. Gammerman.
 Springer, 2015, pp. 303--325.
-
+ \textbf{(5 citations)}
 \item Biggio, Battista, Igino Corona, Blaine Nelson, Benjamin I. P. Rubinstein, Davide Maiorca, Giorgio Fumera, Giorgio Giacinto and Fabio Roli.
 ``Security evaluation of support vector machines in adversarial environments''.
 In: 
 \emph{Support Vector Machines Applications}.
 Ed. by Y. Ma and G. Guo.
 Springer, Feb. 2014, pp. 105--153.
-
+ \textbf{(28 citations)}
 \item Nelson, Blaine, Marco Barreno, Fuching Jack Chi, Anthony D. Joseph, Benjamin I. P. Rubinstein, Udam Saini, Charles Sutton, J. D. Tygar and Kai Xia.
 ``Misleading learners: Co-opting your spam filter''.
 In: 
 \emph{Machine Learning in Cyber Trust: Security, Privacy, and Reliability}.
 Springer, 2009, pp. 17--51.
-
+ \textbf{(49 citations)}
 
 \setcounter{list}{\value{enumi}}
 \end{enumerate}
@@ -157,63 +157,63 @@ In: \emph{IEEE Transactions on Industrial Informatics} (Feb. 2018). in press.
 \item Marchant, Neil G. and Benjamin I. P. Rubinstein.
 ``In Search of an Entity Resolution OASIS: Optimal Asymptotic Sequential Importance Sampling''.
 In: \emph{Proceedings of the VLDB Endowment} 10.11 (Feb. 2017), pp. 1322--1333.
-
+ \textbf{(1 citation)}
 \item Dimitrakakis, Christos, Blaine Nelson, Zuhe Zhang, Aikateirni Mitrokotsa and Benjamin I. P. Rubinstein.
 ``Differential privacy for Bayesian inference through posterior sampling''.
 In: \emph{Journal of Machine Learning Research} 18.11 (Mar. 2017), pp. 1--39.
-
+ \textbf{(7 citations)}
 \item Lau, Lawrence, Yamuna Kankanige, Benjamin Rubinstein, Robert Jones, Christopher Christophi, Vijayaragavan Muralidharan and James Bailey.
 ``Machine-learning algorithms predict graft failure after liver transplantation''.
 In: \emph{Transplantation} 101.4 (Apr. 2017), pp. 125--132.
-
+ \textbf{(3 citations)}
 \item Han, Yi, Tansu Alpcan, Jeffrey Chan, Christopher Leckie and Benjamin I. P. Rubinstein.
 ``A game theoretical approach to defend against co-resident attacks in cloud computing: Preventing co-residence using semi-supervised learning''.
 In: \emph{IEEE Transactions on information Forensics and Security} 11.3 (Mar. 2016), pp. 556--570.
-
+ \textbf{(18 citations)}
 \item Zhang, Duo, Benjamin I. P. Rubinstein and Jim Gemmell.
 ``Principled graph matching algorithms for integrating multiple data sources''.
 In: \emph{IEEE Transactions on Knowledge and Data Engineering} 27.10 (Apr. 2015), pp. 2784--2796.
-
+ \textbf{(6 citations)}
 \item Fanaeepour, Maryam, Lars Kulik, Egemen Tanin and Benjamin I. P. Rubinstein.
 ``The CASE histogram: Privacy-aware processing of trajectory data using aggregates''.
 In: \emph{GeoInformatica} 19.4 (Jul. 2015), pp. 747--798.
-
+ \textbf{(7 citations)}
 \item Zhao, Bo, Benjamin I. P. Rubinstein, Jim Gemmell and Jiawei Han.
 ``A Bayesian approach to discovering truth from conflicting sources for data integration''.
 In: \emph{Proceedings of the VLDB Endowment} 5.6 (Feb. 2012), pp. 550--561.
-
+ \textbf{(234 citations)}
 \item Rubinstein, Benjamin I. P. and Aleksandr Simma.
 ``On the stability of empirical risk minimization in the presence of multiple risk minimizers''.
 In: \emph{IEEE Transactions on Information Theory} 58.7 (Jul. 2012), pp. 4160--4163.
-
+ \textbf{(2 citations)}
 \item Nelson, Blaine, Benjamin I. P. Rubinstein, Ling Huang, Anthony D. Joseph, Steven J. Lee, Satish Rao and J. D. Tygar.
 ``Query strategies for evading convex-inducing classifiers''.
 In: \emph{Journal of Machine Learning Research} 13.May (2012), pp. 1293--1332.
-
+ \textbf{(59 citations)}
 \item Rubinstein, Benjamin I. P. and J. Hyam Rubinstein.
 ``A geometric approach to sample compression''.
 In: \emph{Journal of Machine Learning Research} 13.Apr (2012), pp. 1221--1261.
-
+ \textbf{(31 citations)}
 \item Rubinstein, Benjamin I. P., Peter L. Bartlett, Ling Huang and Nina Taft.
 ``Learning in a large function space: Privacy-preserving mechanisms for SVM learning''.
 In: \emph{Journal of Privacy and Confidentiality} 4.1 (Aug. 2012). Special Issue on Statistical and Learning-Theoretic Challenges in Data Privacy, pp. 65--100.
-
+ \textbf{(117 citations)}
 \item Barth, Adam, Benjamin I. P. Rubinstein, Mukund Sundararajan, John C Mitchell, Dawn Song and Peter L. Bartlett.
 ``A learning-based approach to reactive security''.
 In: \emph{IEEE Transactions on Dependable and Secure Computing} 9.4 (Jul. 2012), pp. 482--493.
-
+ \textbf{(14 citations)}
 \item Rubinstein, Benjamin I. P., Peter L. Bartlett and J. Hyam Rubinstein.
 ``Shifting: One-inclusion mistake bounds and sample compression''.
 In: \emph{Journal of Computer and System Sciences} 75.1 (2009), pp. 37--59.
-
+ \textbf{(35 citations)}
 \item Rubinstein, Benjamin I. P., Blaine Nelson, Ling Huang, Anthony D. Joseph, Shing-hon Lau, Satish Rao, Nina Taft and J. D. Tygar.
 ``Stealthy poisoning attacks on PCA-based anomaly detectors''.
 In: \emph{ACM SIGMETRICS Performance Evaluation Review} 37.2 (2009), pp. 73--74.
-
+ \textbf{(34 citations)}
 \item Rubinstein, Benjamin I. P., Jon McAuliffe, Simon Cawley, Marimuthu Palaniswami, Kotagiri Ramamohanarao and Terence P. Speed.
 ``Machine learning in low-level microarray analysis''.
 In: \emph{ACM SIGKDD Explorations Newsletter} 5.2 (2003). Special Issue on Microarray Data Mining, pp. 130--139.
-
+ \textbf{(22 citations)}
 
 \setcounter{list}{\value{enumi}}
 \end{enumerate}
@@ -253,7 +253,7 @@ In:
 ICML.
 PMLR.
 May. 2017, pp. 2950--2959.
-
+ \textbf{(1 citation)}
 \item Alda, Francesco and Benjamin I. P. Rubinstein.
 ``The Bernstein mechanism: Function release under differential privacy''.
 In: 
@@ -268,7 +268,7 @@ In:
 ICPP.
 IEEE.
 2017, pp. 571--580.
-
+ \textbf{(1 citation)}
 \item Verkade, Heather, Jason M. Lodge, Kristine Elliott, Terrence D. Mulhern, Allen A. Espinosa, Simon J. Cropper and Benjamin I. P. Rubinstein.
 ``Exploring misconceptions as a trigger for enhancing student learning''.
 In: 
@@ -282,14 +282,14 @@ In:
 \emph{Proceedings of the 30th AAAI Conference on Artificial Intelligence}.
 AAAI.
 Feb. 2016, pp. 2365--2371.
-
+ \textbf{(24 citations)}
 \item He, Jiazhen, Benjamin I. P. Rubinstein, James Bailey, Rui Zhang, Sandra Milligan and Jeffrey Chan.
 ``MOOCs meet measurement theory: A topic-modelling approach''.
 In: 
 \emph{Proceedings of the 30th AAAI Conference on Artificial Intelligence}.
 AAAI.
 Feb. 2016, pp. 1195--1201.
-
+ \textbf{(5 citations)}
 \item Fanaeepour, Maryam and Benjamin I. P. Rubinstein.
 ``Beyond points and paths: counting private bodies''.
 In: 
@@ -297,7 +297,7 @@ In:
 ICDM.
 IEEE.
 Dec. 2016, pp. 131--140.
-
+ \textbf{(3 citations)}
 \item Alpcan, Tansu, Benjamin I. P. Rubinstein and Christopher Leckie.
 ``Large-scale strategic games and adversarial machine learning''.
 In: 
@@ -321,7 +321,7 @@ In:
 IJCNN.
 IEEE.
 Jul. 2016, pp. 3689--3696.
-
+ \textbf{(3 citations)}
 \item Milligan, Sandra, Jiazhen He, James Bailey, Rui Zhang and Benjamin I. P. Rubinstein.
 ``Validity: a framework for cross-disciplinary collaboration in mining indicators of learning from MOOC forums''.
 In: 
@@ -329,14 +329,14 @@ In:
 LAK.
 ACM.
 Apr. 2016, pp. 546--547.
-
+ \textbf{(2 citations)}
 \item He, Jiazhen, James Bailey, Benjamin I. P. Rubinstein and Rui Zhang.
 ``Identifying At-Risk Students in Massive Open Online Courses''.
 In: 
 \emph{Proceedings of the 29th AAAI Conference on Artificial Intelligence}.
 AAAI.
 2015, pp. 1749--1755.
-
+ \textbf{(46 citations)}
 \item Lim, Zhe and Benjamin I. P. Rubinstein.
 ``Sub-Merge: Diving Down to the Attribute-Value Level in Statistical Schema Matching.''
 In: 
@@ -351,7 +351,7 @@ In:
 ALT.
 Springer.
 Oct. 2014, pp. 291--305.
-
+ \textbf{(43 citations)}
 \item Dimitrakakis, Christos, Aikaterini Mitrokotsa and Benjamin I. P. Rubinstein.
 ``Proceedings of the 7th Workshop on Artificial Intelligence and Security (AISec)''.
 In: 
@@ -366,7 +366,7 @@ In:
 CIKM.
 ACM.
 Oct. 2012, pp. 2224--2228.
-
+ \textbf{(6 citations)}
 \item Cardenas, Alvaro A., Blaine Nelson and Benjamin I. P. Rubinstein.
 ``Fifth ACM Workshop on Artificial Intelligence and Security (AISec)''.
 In: 
@@ -381,7 +381,7 @@ In:
 \emph{Proceedings of the 4th ACM Workshop on Security and Artificial Intelligence}.
 ACM.
 Oct. 2011, pp. 43--58.
-
+ \textbf{(269 citations)}
 \item Narayanan, Arvind, Elaine Shi and Benjamin I. P. Rubinstein.
 ``Link prediction by de-anonymization: How we won the Kaggle social network challenge''.
 In: 
@@ -389,7 +389,7 @@ In:
 IJCNN.
 IEEE.
 Feb. 2011, pp. 1825--1834.
-
+ \textbf{(121 citations)}
 \item Cardenas, Alvaro A., Rachel Greenstadt and Benjamin I. P. Rubinstein.
 ``Proceedings of the 4th Workshop on Artificial Intelligence and Security (AISec)''.
 In: 
@@ -403,21 +403,21 @@ In:
 \emph{Proceedings of the Thirteenth International Conference on Artificial Intelligence and Statistics}.
 AISTATS.
 2010, pp. 549--556.
-
+ \textbf{(39 citations)}
 \item Barth, Adam, Benjamin I. P. Rubinstein, Mukund Sundararajan, John C. Mitchell, Dawn Song and Peter L. Bartlett.
 ``A learning-based approach to reactive security''.
 In: 
 \emph{Proceedings of the Fourteenth International Conference on Financial Cryptography and Data Security}.
 FC.
 2010, pp. 192--206.
-
+ \textbf{(28 citations)}
 \item Nelson, Blaine, Benjamin I. P. Rubinstein, Ling Huang, Anthony D. Joseph and J. D. Tygar.
 ``Classifier evasion: Models and open problems''.
 In: 
 \emph{International Workshop on Privacy and Security Issues in Data Mining and Machine Learning}.
 PSDML.
 2010, pp. 92--98.
-
+ \textbf{(31 citations)}
 \item Ghosh, Arpita, Benjamin I. P. Rubinstein, Sergei Vassilvitskii and Martin Zinkevich.
 ``Adaptive bidding for display advertising''.
 In: 
@@ -425,7 +425,7 @@ In:
 WWW.
 ACM.
 2009, pp. 251--260.
-
+ \textbf{(60 citations)}
 \item Rubinstein, Benjamin I. P., Blaine Nelson, Ling Huang, Anthony D. Joseph, Shing-hon Lau, Satish Rao, Nina Taft and J. D. Tygar.
 ``ANTIDOTE: Understanding and defending against poisoning of anomaly detectors''.
 In: 
@@ -433,28 +433,28 @@ In:
 IMC.
 ACM.
 2009, pp. 1--14.
-
+ \textbf{(138 citations)}
 \item Rubinstein, J. Hyam and Benjamin I. P. Rubinstein.
 ``Geometric \& Topological Representations of Maximum Classes with Applications to Sample Compression''.
 In: 
 \emph{Proceedings of the 21st Annual Conference on Learning Theory}.
 COLT.
 2008, pp. 299--310.
-
+ \textbf{(7 citations)}
 \item Rubinstein, Benjamin I. P., Blaine Nelson, Ling Huang, Anthony D. Joseph, Shing-hon Lau, Nina Taft and J. Doug Tygar.
 ``Evading anomaly detection through variance injection attacks on PCA''.
 In: 
 \emph{Proceedings of the 11th International Symposium on Recent Advances in Intrusion Detection}.
 RAID.
 2008, pp. 394--395.
-
+ \textbf{(16 citations)}
 \item Nelson, Blaine, Marco Barreno, Fuching Jack Chi, Anthony D. Joseph, Benjamin I. P. Rubinstein, Udam Saini, Charles A. Sutton, J. Doug Tygar and Kai Xia.
 ``Exploiting Machine Learning to Subvert Your Spam Filter.''
 In: 
 \emph{First USENIX Workshop on Large-scale Exploits and Emergent Threats}.
 LEET.
 2008, pp. 1--9.
-
+ \textbf{(107 citations)}
 \item Barreno, Marco, Peter L. Bartlett, Fuching Jack Chi, Anthony D. Joseph, Blaine Nelson, Benjamin I. P. Rubinstein, Udam Saini and J. Doug Tygar.
 ``Open problems in the security of learning''.
 In: 
@@ -462,14 +462,14 @@ In:
 AISec.
 ACM.
 2008, pp. 19--26.
-
+ \textbf{(39 citations)}
 \item Rubinstein, Benjamin I. P., Peter L. Bartlett and J. Hyam Rubinstein.
 ``Shifting, one-inclusion mistake bounds and tight multiclass expected risk bounds''.
 In: 
 \emph{Advances in Neural Information Processing Systems 19}.
 NIPS.
 2007, pp. 1193--1200.
-
+ \textbf{(11 citations)}
 \item Rubinstein, Benjamin I. P.
 ``Evolving quantum circuits using genetic programming''.
 In: 
@@ -477,7 +477,7 @@ In:
 CEC.
 IEEE.
 2001, pp. 144--151.
-
+ \textbf{(66 citations)}
 
 \setcounter{list}{\value{enumi}}
 \end{enumerate}
@@ -519,7 +519,7 @@ In:
 ICML.
 PMLR.
 May. 2017, pp. 2950--2959.
-
+ \textbf{(1 citation)}
 \item Alda, Francesco and Benjamin I. P. Rubinstein.
 ``The Bernstein mechanism: Function release under differential privacy''.
 In: 
@@ -534,7 +534,7 @@ In:
 ICPP.
 IEEE.
 2017, pp. 571--580.
-
+ \textbf{(1 citation)}
 \item Verkade, Heather, Jason M. Lodge, Kristine Elliott, Terrence D. Mulhern, Allen A. Espinosa, Simon J. Cropper and Benjamin I. P. Rubinstein.
 ``Exploring misconceptions as a trigger for enhancing student learning''.
 In: 
@@ -548,14 +548,14 @@ In:
 \emph{Proceedings of the 30th AAAI Conference on Artificial Intelligence}.
 AAAI.
 Feb. 2016, pp. 2365--2371.
-
+ \textbf{(24 citations)}
 \item He, Jiazhen, Benjamin I. P. Rubinstein, James Bailey, Rui Zhang, Sandra Milligan and Jeffrey Chan.
 ``MOOCs meet measurement theory: A topic-modelling approach''.
 In: 
 \emph{Proceedings of the 30th AAAI Conference on Artificial Intelligence}.
 AAAI.
 Feb. 2016, pp. 1195--1201.
-
+ \textbf{(5 citations)}
 \item Fanaeepour, Maryam and Benjamin I. P. Rubinstein.
 ``Beyond points and paths: counting private bodies''.
 In: 
@@ -563,7 +563,7 @@ In:
 ICDM.
 IEEE.
 Dec. 2016, pp. 131--140.
-
+ \textbf{(3 citations)}
 \item Alpcan, Tansu, Benjamin I. P. Rubinstein and Christopher Leckie.
 ``Large-scale strategic games and adversarial machine learning''.
 In: 
@@ -587,7 +587,7 @@ In:
 IJCNN.
 IEEE.
 Jul. 2016, pp. 3689--3696.
-
+ \textbf{(3 citations)}
 \item Milligan, Sandra, Jiazhen He, James Bailey, Rui Zhang and Benjamin I. P. Rubinstein.
 ``Validity: a framework for cross-disciplinary collaboration in mining indicators of learning from MOOC forums''.
 In: 
@@ -595,14 +595,14 @@ In:
 LAK.
 ACM.
 Apr. 2016, pp. 546--547.
-
+ \textbf{(2 citations)}
 \item He, Jiazhen, James Bailey, Benjamin I. P. Rubinstein and Rui Zhang.
 ``Identifying At-Risk Students in Massive Open Online Courses''.
 In: 
 \emph{Proceedings of the 29th AAAI Conference on Artificial Intelligence}.
 AAAI.
 2015, pp. 1749--1755.
-
+ \textbf{(46 citations)}
 \item Lim, Zhe and Benjamin I. P. Rubinstein.
 ``Sub-Merge: Diving Down to the Attribute-Value Level in Statistical Schema Matching.''
 In: 
@@ -617,7 +617,7 @@ In:
 ALT.
 Springer.
 Oct. 2014, pp. 291--305.
-
+ \textbf{(43 citations)}
 \item Dimitrakakis, Christos, Aikaterini Mitrokotsa and Benjamin I. P. Rubinstein.
 ``Proceedings of the 7th Workshop on Artificial Intelligence and Security (AISec)''.
 In: 
@@ -632,7 +632,7 @@ In:
 CIKM.
 ACM.
 Oct. 2012, pp. 2224--2228.
-
+ \textbf{(6 citations)}
 \item Cardenas, Alvaro A., Blaine Nelson and Benjamin I. P. Rubinstein.
 ``Fifth ACM Workshop on Artificial Intelligence and Security (AISec)''.
 In: 
@@ -647,7 +647,7 @@ In:
 \emph{Proceedings of the 4th ACM Workshop on Security and Artificial Intelligence}.
 ACM.
 Oct. 2011, pp. 43--58.
-
+ \textbf{(269 citations)}
 \item Narayanan, Arvind, Elaine Shi and Benjamin I. P. Rubinstein.
 ``Link prediction by de-anonymization: How we won the Kaggle social network challenge''.
 In: 
@@ -655,7 +655,7 @@ In:
 IJCNN.
 IEEE.
 Feb. 2011, pp. 1825--1834.
-
+ \textbf{(121 citations)}
 \item Cardenas, Alvaro A., Rachel Greenstadt and Benjamin I. P. Rubinstein.
 ``Proceedings of the 4th Workshop on Artificial Intelligence and Security (AISec)''.
 In: 
@@ -669,21 +669,21 @@ In:
 \emph{Proceedings of the Thirteenth International Conference on Artificial Intelligence and Statistics}.
 AISTATS.
 2010, pp. 549--556.
-
+ \textbf{(39 citations)}
 \item Barth, Adam, Benjamin I. P. Rubinstein, Mukund Sundararajan, John C. Mitchell, Dawn Song and Peter L. Bartlett.
 ``A learning-based approach to reactive security''.
 In: 
 \emph{Proceedings of the Fourteenth International Conference on Financial Cryptography and Data Security}.
 FC.
 2010, pp. 192--206.
-
+ \textbf{(28 citations)}
 \item Nelson, Blaine, Benjamin I. P. Rubinstein, Ling Huang, Anthony D. Joseph and J. D. Tygar.
 ``Classifier evasion: Models and open problems''.
 In: 
 \emph{International Workshop on Privacy and Security Issues in Data Mining and Machine Learning}.
 PSDML.
 2010, pp. 92--98.
-
+ \textbf{(31 citations)}
 \item Ghosh, Arpita, Benjamin I. P. Rubinstein, Sergei Vassilvitskii and Martin Zinkevich.
 ``Adaptive bidding for display advertising''.
 In: 
@@ -691,7 +691,7 @@ In:
 WWW.
 ACM.
 2009, pp. 251--260.
-
+ \textbf{(60 citations)}
 \item Rubinstein, Benjamin I. P., Blaine Nelson, Ling Huang, Anthony D. Joseph, Shing-hon Lau, Satish Rao, Nina Taft and J. D. Tygar.
 ``ANTIDOTE: Understanding and defending against poisoning of anomaly detectors''.
 In: 
@@ -699,28 +699,28 @@ In:
 IMC.
 ACM.
 2009, pp. 1--14.
-
+ \textbf{(138 citations)}
 \item Rubinstein, J. Hyam and Benjamin I. P. Rubinstein.
 ``Geometric \& Topological Representations of Maximum Classes with Applications to Sample Compression''.
 In: 
 \emph{Proceedings of the 21st Annual Conference on Learning Theory}.
 COLT.
 2008, pp. 299--310.
-
+ \textbf{(7 citations)}
 \item Rubinstein, Benjamin I. P., Blaine Nelson, Ling Huang, Anthony D. Joseph, Shing-hon Lau, Nina Taft and J. Doug Tygar.
 ``Evading anomaly detection through variance injection attacks on PCA''.
 In: 
 \emph{Proceedings of the 11th International Symposium on Recent Advances in Intrusion Detection}.
 RAID.
 2008, pp. 394--395.
-
+ \textbf{(16 citations)}
 \item Nelson, Blaine, Marco Barreno, Fuching Jack Chi, Anthony D. Joseph, Benjamin I. P. Rubinstein, Udam Saini, Charles A. Sutton, J. Doug Tygar and Kai Xia.
 ``Exploiting Machine Learning to Subvert Your Spam Filter.''
 In: 
 \emph{First USENIX Workshop on Large-scale Exploits and Emergent Threats}.
 LEET.
 2008, pp. 1--9.
-
+ \textbf{(107 citations)}
 \item Barreno, Marco, Peter L. Bartlett, Fuching Jack Chi, Anthony D. Joseph, Blaine Nelson, Benjamin I. P. Rubinstein, Udam Saini and J. Doug Tygar.
 ``Open problems in the security of learning''.
 In: 
@@ -728,14 +728,14 @@ In:
 AISec.
 ACM.
 2008, pp. 19--26.
-
+ \textbf{(39 citations)}
 \item Rubinstein, Benjamin I. P., Peter L. Bartlett and J. Hyam Rubinstein.
 ``Shifting, one-inclusion mistake bounds and tight multiclass expected risk bounds''.
 In: 
 \emph{Advances in Neural Information Processing Systems 19}.
 NIPS.
 2007, pp. 1193--1200.
-
+ \textbf{(11 citations)}
 \item \emph{Proceedings of the Second Australian Students' Computing Conference}.
 AUSCC.
 175 pages.
@@ -755,7 +755,7 @@ In:
 CEC.
 IEEE.
 2001, pp. 144--151.
-
+ \textbf{(66 citations)}
 
 \setcounter{list}{\value{enumi}}
 \end{enumerate}
@@ -769,17 +769,17 @@ IEEE.
 \emph{How Open Should Open Source Be?}
 technical report UCB/EECS-2011-98.
 Department of Electrical Engineering \& Computer Sciences, UC Berkeley, Aug. 2011.
-
+ \textbf{(6 citations)}
 \item Gemmell, Jim, Benjamin I. P. Rubinstein and Ashok K. Chandra.
 \emph{Improving entity resolution with global constraints}.
 technical report MSR-TR-2011-100.
 Microsoft Research, Aug. 2011.
-
+ \textbf{(10 citations)}
 \item Rubinstein, Benjamin I. P., Blaine Nelson, Ling Huang, Anthony D. Joseph, Shing-hon Lau, Nina Taft and Doug Tygar.
 \emph{Compromising PCA-based anomaly detectors for network-wide traffic}.
 technical report UCB/EECS-2008-73.
 EECS Department, University of California, Berkeley, 2008.
-
+ \textbf{(23 citations)}
 \item Culnane, Chris, Benjamin I. P. Rubinstein and Vanessa Teague.
 \emph{Options for encoding names for data linking at the Australian Bureau of Statistics}.
 Feb. 2018.
@@ -789,22 +789,22 @@ arXiv: 1802.07975 [cs.CR].
 \emph{Sublinear-Time Adaptive Data Analysis}.
 Sep. 2017.
 arXiv: 1709.09778 [cs.LG].
-
+ \textbf{(1 citation)}
 \item Culnane, Chris, Benjamin I. P. Rubinstein and Vanessa Teague.
 \emph{Privacy Assessment of De-identified Opal Data: A report for Transport for NSW}.
 May. 2017.
 arXiv: 1704.08547 [cs.CR].
-
+ \textbf{(2 citations)}
 \item Culnane, Chris, Benjamin I. P. Rubinstein and Vanessa Teague.
 \emph{Vulnerabilities in the use of similarity tables in combination with pseudonymisation to preserve data privacy in the UK Office for National Statistics' Privacy-Preserving Record Linkage}.
 2017.
 arXiv: 1712.00871 [cs.CR].
-
+ \textbf{(1 citation)}
 \item Culnane, Chris, Benjamin I. P. Rubinstein and Vanessa Teague.
 \emph{Health Data in an Open World}.
 Dec. 2017.
 arXiv: 1712.05627 [cs.CY].
-
+ \textbf{(1 citation)}
 \item He, Jiazhen, Benjamin I. P. Rubinstein, James Bailey, Rui Zhang and Sandra Milligan.
 \emph{TopicResponse: A Marriage of Topic Modelling and Rasch Modelling for Automatic Measurement in MOOCs}.
 2016.
