--- a/group.Rmd
+++ b/group.Rmd
@@ -15,6 +15,7 @@ I am fortunate to have supervised a brilliant group of researchers
 
 ### PhD students
 
+* [Bastian Oetomo](https://www.linkedin.com/in/bastian-oetomo-34300856/) (w Renata Borovica-Gajic 2018-- ). Self-driving databases.
 * [Dongge Liu](https://www.linkedin.com/in/dongge-liu-9a957913a) (w Toby Murray 2018-- ). Software fuzzing with machine learning.
 * [Leyla Roohi](https://au.linkedin.com/in/leyla-roohi-b4544a67) (w Vanessa Teague 2017-- ). Secure storage and private querying for telecommunications metadata.
 * [Lingjuan Lyu](https://www.researchgate.net/profile/Lingjuan_Lyu) (w Marimuthu Palaniswami 2016-- ). Privacy in distributed sensing.
@@ -22,12 +23,11 @@ I am fortunate to have supervised a brilliant group of researchers
 * Yuan Li (w Trevor Cohn 2015-- ). Crowd sourcing, Bayesian optimisation, NLP.
 * [Xunyun Liu](https://xunyunliu.github.io/) (w Raj Buyya, Rodrigo Calheiros 2015-- ). Stream computing.
 * [Safiollah Heidari](https://sites.google.com/site/safiheidari/) (w Raj Buyya 2015-- ). Distributed graph processing.
-* [Yamuna Kankanige](https://www.linkedin.com/in/yamuna-kankanige-8b258a26/) (w James Bailey 2015-- ). Liver transplant outcomes, Austin Health
-* [Zay Aye](https://www.researchgate.net/profile/Zay_Aye) - CompSci (w Rao Kotagiri 2014-- ). Learning distance metrics.  
-
 
 ### PhD students---Completed
 
+* [Zay Aye](https://www.researchgate.net/profile/Zay_Aye) - CompSci (w Rao Kotagiri 2014--18). Learning distance metrics → Tutor
+* [Yamuna Kankanige](https://www.linkedin.com/in/yamuna-kankanige-8b258a26/) (w James Bailey 2015--18). Predicting liver transplant outcomes with Austin Health → Bioinformatician at Peter MacCallum Cancer Centre
 * [Maryam Fanaeepour](https://scholar.google.com.au/citations?user=1EPDwbAAAAAJ&hl=en) - CompSci (w Lars Kulik, Egemen Tanin 2014--17). Location data privacy → Postdoc at Duke University
 * [Jiazhen He](https://scholar.google.com.au/citations?user=GtpWKiwAAAAJ&hl=en) - CompSci (w James Bailey, Rui Zhang 2014--17). Education analytics and MOOCs → Postdoc at Univ Melbourne
 * [Zuhe Zhang](https://www.researchgate.net/profile/Zuhe_Zhang) - Maths & Stats (w Sanming Zhou 2014--17). Differential privacy in Bayesian statistics → Data Scientist at ANZ Bank
