--- a/group.Rmd
+++ b/group.Rmd
@@ -9,34 +9,39 @@ I am fortunate to have supervised a brilliant group of researchers
 
 ### Postdocs
 
-* [Shen Wang](https://scholar.google.com/citations?user=TpErHPkAAAAJ&hl=en) (2016-- ). Probabilistic programming, databases, record linkage.
-* [Yi Han](https://scholar.google.com/citations?user=e_mtK4kAAAAJ&hl=en) (2016-- ). Adversarial machine learning.  
-
+* [Shuo Zhou](http://shuo-zhou.info/) (w Tordesillas, Bailey, Bondell 2018-- ). Complex networks in materials science, cybersecurity.
+* [Thibaut Lienart](https://tlienart.github.io/) (2018-- ). Adversarial machine learning.
+* [Yi Han](https://scholar.google.com/citations?user=e_mtK4kAAAAJ&hl=en) (2016-- ). Adversarial reinforcement learning, software-defined networks.
 
 ### PhD students
 
+* [Duc Than Nguyen](https://ndthan.bitbucket.io/) (w Toby Murray 2018-- ). Probabilistic information flow security.
+* [Malinga Perera](http://www.malinga.me/) (w Renata Borovica-Gajic 2018-- ). Self-driving databases.
 * [Bastian Oetomo](https://www.linkedin.com/in/bastian-oetomo-34300856/) (w Renata Borovica-Gajic 2018-- ). Self-driving databases.
-* [Dongge Liu](https://www.linkedin.com/in/dongge-liu-9a957913a) (w Toby Murray 2018-- ). Software fuzzing with machine learning.
+* [Dongge Liu](https://www.linkedin.com/in/dongge-liu-9a957913a) (w Toby Murray, Gideon Ernst 2018-- ). Software fuzzing with machine learning.
 * [Leyla Roohi](https://au.linkedin.com/in/leyla-roohi-b4544a67) (w Vanessa Teague 2017-- ). Secure storage and private querying for telecommunications metadata.
-* [Lingjuan Lyu](https://www.researchgate.net/profile/Lingjuan_Lyu) (w Marimuthu Palaniswami 2016-- ). Privacy in distributed sensing.
 * [Neil Marchant](https://www.linkedin.com/in/neil-marchant-466678aa/) (w Aurore Delaigle 2016-- ). Record linkage, adaptive importance sampling.
 * Yuan Li (w Trevor Cohn 2015-- ). Crowd sourcing, Bayesian optimisation, NLP.
-* [Xunyun Liu](https://xunyunliu.github.io/) (w Raj Buyya, Rodrigo Calheiros 2015-- ). Stream computing.
-* [Safiollah Heidari](https://sites.google.com/site/safiheidari/) (w Raj Buyya 2015-- ). Distributed graph processing.
 
 ### PhD students---Completed
 
-* [Zay Aye](https://www.researchgate.net/profile/Zay_Aye) - CompSci (w Rao Kotagiri 2014--18). Learning distance metrics → Tutor
+* [Lingjuan Lyu](https://www.researchgate.net/profile/Lingjuan_Lyu) (w Marimuthu Palaniswami 2016-- ). Privacy in distributed sensing → Postdoc at the ANU
+* [Safiollah Heidari](https://sites.google.com/site/safiheidari/) (w Raj Buyya 2015-- ). Distributed graph processing → Founder, NeuroPhyte
+* [Xunyun Liu](https://xunyunliu.github.io/) (w Raj Buyya, Rodrigo Calheiros 2015--18). Stream computing → Assistant Prof at NUDT
+* [Zay Aye](https://www.researchgate.net/profile/Zay_Aye) - CompSci (w Rao Kotagiri 2014--18). Learning distance metrics → Postdoc at Univ Melbourne
 * [Yamuna Kankanige](https://www.linkedin.com/in/yamuna-kankanige-8b258a26/) (w James Bailey 2015--18). Predicting liver transplant outcomes with Austin Health → Bioinformatician at Peter MacCallum Cancer Centre
 * [Maryam Fanaeepour](https://scholar.google.com.au/citations?user=1EPDwbAAAAAJ&hl=en) - CompSci (w Lars Kulik, Egemen Tanin 2014--17). Location data privacy → Postdoc at Duke University
 * [Jiazhen He](https://scholar.google.com.au/citations?user=GtpWKiwAAAAJ&hl=en) - CompSci (w James Bailey, Rui Zhang 2014--17). Education analytics and MOOCs → Postdoc at Univ Melbourne
 * [Zuhe Zhang](https://www.researchgate.net/profile/Zuhe_Zhang) - Maths & Stats (w Sanming Zhou 2014--17). Differential privacy in Bayesian statistics → Data Scientist at ANZ Bank
 
+### Other Alumni
 
-### PhD Interns---former Microsoft Research
-
-* [Akshay Balsubramani](http://www.linkedin.com/pub/akshay-balsubramani/12/3aa/2) - UC San Diego (2012) → Postdoc at Stanford
-* [Emanuele Coviello](http://acsweb.ucsd.edu/~ecoviell/) - UC San Diego (2012) → Founder/CEO at Keevio
-* [Sahand Negahban](http://www.eecs.berkeley.edu/~sahand_n/) - UC Berkeley (2011) → Assistant Prof at Yale Statistics
-* [Duo Zhang](http://sifaka.cs.uiuc.edu/~dzhang22/) - UIUC (2011) → Software Engineer at Twitter
-* [Bo Zhao](http://dm1.cs.uiuc.edu/) - UIUC (2011) → Researcher at Microsoft Research
+* [Shen Wang](https://scholar.google.com/citations?user=TpErHPkAAAAJ&hl=en) (postdoc 2016--18). Probabilistic programming, databases, record linkage.
+* [Ben Fish](http://ben.fish/) (medium-term PhD visitor 2016) → Postdoc at MSR Montréal
+* [Francesco Aldà](http://www.ruhr-uni-bochum.de/lmi/alda/) (medium-term PhD visitor 2016) → Data Scientist at SAP, Germany
+<!-- ### PhD interns---former Microsoft Research -->
+* [Akshay Balsubramani](http://www.linkedin.com/pub/akshay-balsubramani/12/3aa/2) (MSR PhD intern 2012) → Postdoc at Stanford
+* [Emanuele Coviello](http://acsweb.ucsd.edu/~ecoviell/) (MSR PhD intern 2012) → Founder/CEO at Keevio
+* [Sahand Negahban](http://www.eecs.berkeley.edu/~sahand_n/) (MSR PhD intern 2011) → Assistant Prof at Yale Statistics
+* [Duo Zhang](http://sifaka.cs.uiuc.edu/~dzhang22/) (MSR PhD intern 2011) → Software Engineer at Twitter
+* [Bo Zhao](http://dm1.cs.uiuc.edu/) (MSR PhD intern 2011) → Researcher at Microsoft Research
