--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1,12 +1,46 @@
+@inproceedings{roohi2019,
+  title={Differentially-Private Two-Party Egocentric Betweenness Centrality},
+  author={Roohi, Leyla and Rubinstein, Benjamin I. P. and Teague, Vanessa},
+  year={2019},
+  booktitle={The 38th Annual IEEE International Conference on Computer Communications},
+  series={INFOCOM},
+  note={accepted},
+  presort={01}
+}
+
+@inproceedings{alfeld2019attacking,
+  title={Attacking Data Transforming Learners at Training Time},
+  author={Alfeld, Scott and Vartanian, Ara and Newman-Johnson, Lucas and Rubinstein, Benjamin I.P},
+  booktitle={Proceedings of the 33rd AAAI Conference on Artificial Intelligence},
+  series={AAAI},
+  note={accepted},
+  year={2019},
+  presort={02}
+}
+
 @inproceedings{fanaeepour2018histogramming,
   title={Histogramming Privately Ever After: Differentially-Private Data-Dependent Error Bound Optimisation},
   author={Fanaeepour, Maryam and Rubinstein, Benjamin I. P.},
-  booktitle={Proceedings of the 34th International Conference on Data Engineering},
+  booktitle={2018 IEEE 34th International Conference on Data Engineering},
   series={ICDE},
   year={2018},
+  month={Apr},
+  pages={1204--1207},
   organization={IEEE},
   presort={01},
-  rmdnote={full=https://arxiv.org/abs/1702.05607}
+  rmdnote={pdf=http://doi.ieeecomputersociety.org/10.1109/ICDE.2018.00111;full=https://arxiv.org/abs/1702.05607}
+}
+
+@inproceedings{han2018reinforcement,
+  title={Reinforcement Learning for Autonomous Defence in Software-Defined Networking},
+  author={Han, Yi and Rubinstein, Benjamin I. P. and Abraham, Tamas and Alpcan, Tansu and De Vel, Olivier and Erfani, Sarah and Hubczenko, David and Leckie, Christopher and Montague, Paul},
+  booktitle={9th International Conference on Decision and Game Theory for Security},
+  series={GameSec},
+  pages={145--165},
+  year={2018},
+  organization={Springer},
+  presort={02},
+  rmdnote={pdf=https://link.springer.com/book/10.1007/978-3-030-01554-1;full=https://arxiv.org/abs/1808.05770}
 }
 
 @article{fanaeepour2018differentially,
@@ -19,7 +53,7 @@
   volume={54},
   number={1},
   publisher={Springer London},
-  presort={02},
+  presort={03},
   rmdnote={pdf=https://link.springer.com/article/10.1007/s10115-017-1113-6}
 }
 
@@ -27,10 +61,13 @@
 author = {Lingjuan Lyu and Karthik Nandakumar and Rubinstein, Benjamin I. P. and Jiong Jin and Justin Bedo and Marimuthu Palaniswami},
 title = {{PPFA}: Privacy-Preserving Fog-enabled Aggregation in Smart Grid},
 journal = {IEEE Transactions on Industrial Informatics},
-note = {in press},
-month = {Feb},
+month = {Aug},
 year = {2018},
-presort = {03}
+volume = {14},
+number = {8},
+pages = {3733-3744},
+presort = {04},
+rmdnote={pdf=https://ieeexplore.ieee.org/document/8286939/}
 }
 
 @book{joseph2018adversarial,
@@ -40,7 +77,7 @@ author = {Joseph, Anthony D. and Nelson, Blaine and Rubinstein, Benjamin I. P. a
 publisher = {Cambridge University Press},
 note = {in press},
 rmdnote = {pub=https://www.cambridge.org/core/books/adversarial-machine-learning/C42A9D49CBC626DF7B8E54E72974AA3B},
-presort={04}
+presort={05}
 }
 
 @misc{culnane2018options,
@@ -51,7 +88,7 @@ presort={04}
   eprintclass = {cs.CR},
   year={2018},
   month={Feb},
-  presort={05},
+  presort={06},
   rmdnote={pdf=https://arxiv.org/abs/1802.07975}
 }
 
@@ -62,8 +99,9 @@ booktitle = {22nd Pacific-Asia Conference on Knowledge Discovery and Data Mining
 series = {PAKDD},
 month = {Feb},
 year = {2018},
-note = {accepted},
-presort={06}
+presort={07},
+pages={452--464},
+rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
 }
 
 @inproceedings{han2018adequacy,
@@ -73,7 +111,7 @@ presort={06}
   series={AICS},
   year={2018},
   month={Jan},
-  presort={07},
+  presort={08},
   rmdnote={pdf=https://arxiv.org/abs/1704.01704}
 }
 
